Updated home link

--- a/betasite/mainSite/templates/mainSite/base.html
+++ b/betasite/mainSite/templates/mainSite/base.html
@@ -10,7 +10,7 @@
 </head>
 <body>
 	<div class="ui top large fixed inverted menu">
-		<div class="item header"><a href="#">Beta University</a></div>
+		<div class="item header"><a href="{% url 'home' %}">Beta University</a></div>
 		<div class="item"><a href="#">About Us</a></div>
 		<div class="item right">
 			<div class="ui primary button" id="login">Log-in</div>
