--- a/betasite/mainSite/templates/mainSite/base.html
+++ b/betasite/mainSite/templates/mainSite/base.html
@@ -11,7 +11,7 @@
 <body>
 	<div class="ui top large fixed inverted menu">
 		<div class="item header"><a href="{% url 'home' %}">Beta University</a></div>
-		<div class="item"><a href="#">About Us</a></div>
+		<div class="item"><a href="{% url 'about' %}">About Us</a></div>
 		<div class="item right">
 			<div class="ui primary button" id="login">Log-in</div>
 		</div>
