--- a/betasite/mainSite/templates/mainSite/home.html
+++ b/betasite/mainSite/templates/mainSite/home.html
@@ -28,7 +28,7 @@
 					<h1 class="ui header" style="font-size: 70px;" id="jumbo">Beta University Annual Fund</h1>
 					<br>
 					<br>
-					<div class="ui huge green button" id="start">Get Started Now</div>
+					<div class="ui massive green button" id="start">Get Started Now</div>
 				</div>
 				<div class="two wide column"></div>
 			</div>
