--- a/betasite/adminSite/templates/adminSite/donorList.html
+++ b/betasite/adminSite/templates/adminSite/donorList.html
@@ -27,7 +27,7 @@
 					  <tbody>
 					  	{% for donor in object_list %}
 						    <tr>
-						      <td><a href="#">{{ donor.donorid }}</a></td>
+						      <td><a href="{% url 'adminSite:donor' donor.donorid %}">{{ donor.donorid }}</a></td>
 						      <td>{{ donor.fname }} {{donor.lname}} </td>
 						      <td>{{ donor.transactions.last.date_paid }}</td>
 						    </tr>
@@ -60,8 +60,7 @@
 {% block scripts %}
 	<script type="text/javascript">
 		$('#addDonor').click(function() {
-			location.href = "{% url 'addDonor' %}";
-			console.log("{% url 'addDonor' %}");
+			location.href = "{% url 'adminSite:addDonor' %}";
 		});
 	</script>
 {% endblock %}
