--- a/betasite/adminSite/templates/adminSite/eventList.html
+++ b/betasite/adminSite/templates/adminSite/eventList.html
@@ -60,7 +60,7 @@
 {% block scripts %}
 	<script type="text/javascript">
 		$('#addEvent').click(function() {
-			location.href = "{% url 'addEvent' %}";
+			location.href = "{% url 'adminSite:addEvent' %}";
 		});
 	</script>
 {% endblock %}
