--- a/betasite/adminSite/templates/adminSite/donorList.html
+++ b/betasite/adminSite/templates/adminSite/donorList.html
@@ -29,10 +29,10 @@
 					  	{% for donor in object_list %}
 						    <tr>
 						      <td><a href="{% url 'adminSite:donor' donor.donorid %}">{{ donor.donorid }}</a></td>
-						      <td>{{ donor.fname }} {{donor.lname}} </td>
+						      <td>{{ donor.fname }} {{ donor.lname }} </td>
 						      <td>{{ donor.transactions.last.date_paid }}</td>
 						      <td>
-								<a href="#"><i class="trash icon"></i></a>
+								<a href="{% url 'adminSite:deleteDonor' donor.donorid %}"><i class="trash icon"></i></a>
 						      </td>
 						    </tr>
 					    {% endfor %}
