--- a/betasite/adminSite/templates/adminSite/donorList.html
+++ b/betasite/adminSite/templates/adminSite/donorList.html
@@ -22,7 +22,7 @@
 					      <th>Donor ID</th>
 					      <th>Donor Name</th>
 					      <th>Date Last Payed</th>
-					      <th></th>
+					      <th>Delete</th>
 					    </tr>
 					  </thead>
 					  <tbody>
