--- a/betasite/adminSite/templates/adminSite/donor.html
+++ b/betasite/adminSite/templates/adminSite/donor.html
@@ -117,4 +117,10 @@
 		</div>
 {% endblock %}
 
-{% block scripts %}{% endblock %}
+{% block scripts %}	
+	<script type="text/javascript">
+		$('#edit').click(function() {
+			location.href = "{% url 'adminSite:editDonor' %}";
+		});
+	</script>
+{% endblock %}
