--- a/betasite/adminSite/templates/adminSite/classList.html
+++ b/betasite/adminSite/templates/adminSite/classList.html
@@ -30,7 +30,7 @@
 					      <td><a href="{% url 'adminSite:class' class.classyear%}">{{ class.classyear }}</a></td>
 					      <td>{{ class.coordinator }}</td>
 					      <td>
-								<a href="#"><i class="trash icon"></i></a>
+								<a href="{% url 'adminSite:deleteClass' class.classyear %}"><i class="trash icon"></i></a>
 						  </td>
 					    </tr>
 					    {% endfor %}
