Added Monthly Report stuff

--- a/betasite/adminSite/templates/adminSite/annualReport.html
+++ b/betasite/adminSite/templates/adminSite/annualReport.html
@@ -19,17 +19,16 @@
 					<table class="ui single line table">
 					  <thead>
 					    <tr>
-					      <th>Donor ID</th>
-					      <th>Donor Name</th>
-					      <th>Date Last Payed</th>
-					      <th>Delete</th>
+					      <th>Total Pledges</th>
+					      <th>Total Gifts</th>
+					      <th>Percentage</th>
 					    </tr>
 					  </thead>
 					  <tbody>
-					  	{% for donor in object_list %}
+					  	{% for  in object_list %}
 						    <tr>
-						      <td><a href="{% url 'adminSite:donor' donor.donorid %}">{{ donor.donorid }}</a></td>
-						      <td>{{ donor.fname }} {{ donor.lname }} </td>
+						      <td></td>
+						      <td>{{ do }}</td>
 						      <td>{{ donor.transactions.last.date_paid }}</td>
 						      <td>
 								<a href="{% url 'adminSite:deleteDonor' donor.donorid %}"><i class="trash icon"></i></a>
