Added Summation and Subtraction Filter and added some new columns to donations.html and Donor.html

--- a/betasite/adminSite/templates/adminSite/addDonation.html
+++ b/betasite/adminSite/templates/adminSite/addDonation.html
@@ -56,6 +56,12 @@
 									<input type="text" placeholder="Amount" name="amount">
 								</div>
 							</div>
+							<div class="field">
+								<label>Pledge Date</label>
+								<div>
+									<input type="text" placeholder="YYYY-MM-DD" name="pledge_date">
+								</div>
+							</div>
 						</div>
 						<div class="ui primary button" tabindex="0" id="addDonation">Add Donation</div>
 					</form>
