--- a/betasite/adminSite/templates/adminSite/donation.html
+++ b/betasite/adminSite/templates/adminSite/donation.html
@@ -12,6 +12,7 @@
 				<div class="twelve wide column">
 					<h1>Donation</h1>
 					<h4>Pledge Amount: {{ donation.amount }}</h4>
+					<h4>Pledge Date: {{ donation.pledge_date }}</h4>
 				</div>
 			</div>
 			<div class="row">
