--- a/betasite/adminSite/templates/adminSite/donationList.html
+++ b/betasite/adminSite/templates/adminSite/donationList.html
@@ -1,5 +1,6 @@
 {% extends 'adminSite/base.html' %}
 {% load staticfiles %}
+{% load sum %}
 {% block title %}Beta University Admin: Home{% endblock %}
 
 {% block style %}{% endblock %}
@@ -23,6 +24,7 @@
 				      <th>Donor ID</th>
 				      <th>Pledge Amount</th>
 				      <th>Amount Payed</th>
+				      <th>Balance</th>
 				      <th>Date Last Payed</th>
 				      <th>Delete</th>
 				    </tr>
@@ -32,9 +34,12 @@
 				    <tr>
 					    <td><a href="{% url 'adminSite:donation' donation.donationno %}">{{ donation.donationno }}</a></td>
 					    <td><a href="{% url 'adminSite:donor' donation.donorid.donorid %}">{{ donation.donorid }}</a></td>
-					    <td>{{ donation.amount }}PHP</td>
-					    <td>{{ donation.transactions.last.amount_paid }}PHP</td>
+					    <td>{{ donation.amount }} PHP</td>
+					    {% with payed=donation.transactions.all|summation %}
+					    <td>{{ payed }} PHP</td>
+					    <td>{{ donation.amount|sub:payed }} PHP</td>
 					    <td>{{ donation.transactions.all.last.date_paid }}</td>
+					    {% endwith %}
 					    <td>
 								<a href="{% url 'adminSite:deleteDonation' donation.donationno %}"><i class="trash icon"></i></a>
 						</td>
