--- a/betasite/adminSite/templates/adminSite/donor.html
+++ b/betasite/adminSite/templates/adminSite/donor.html
@@ -1,5 +1,6 @@
 {% extends 'adminSite/base.html' %}
 {% load staticfiles %}
+{% load sum %}
 {% block title %}Beta University Admin: {{ donor.fname }} {{ donor.lname }} {% endblock %}
 
 {% block style %}{% endblock %}
@@ -45,6 +46,7 @@
 					    <tr>
 					      <th>Donation ID</th>
 					      <th>Amount Pledged</th>
+					      <th>Amount Payed</th>
 					      <th>Date of Last Payment</th>
 					    </tr>
 					  </thead>
@@ -52,7 +54,8 @@
 					  	{% for donation in donor.donations.all %}
 					    <tr>
 					      <td><a href="{% url 'adminSite:donation' donation.donationno %}">{{ donation.donationno }}</a></td>
-					      <td>{{ donation.amount }}PHP</td>
+					      <td>{{ donation.amount }} PHP</td>
+					      <td>{{ donation.transactions.all|summation }} PHP</td>
 					      <td>{{ donation.transactions.last.date_paid }}</td>
 					    </tr>
 					    {% endfor %}
@@ -87,12 +90,12 @@
 					      <th>Event Date</th>
 					    </tr>
 					  </thead>
-					  <tbody>
-					  {% for event in donor.events.objects %}
+					  <tbody> 
+					  {% for event in eventDonations %}
 					    <tr>
-					      <td><a href="#">{{ event.eventid }}</a></td>
-					      <td>{{ event.eventname }}</td>
-					      <td>{{ event.eventdate }}</td>
+					      <td><a href="{% url 'adminSite:event' event.eventid %}">{{ event.eventid }}</a></td>
+					      <td>{{ event.eventid.event_name }}</td>
+					      <td>{{ event.eventid.event_date }}</td>
 					    </tr>
 					  {% endfor %}
 					  </tbody>
@@ -120,7 +123,7 @@
 {% block scripts %}	
 	<script type="text/javascript">
 		$('#edit').click(function() {
-			location.href = "{% url 'adminSite:editDonor' %}";
+			location.href = "{% url 'adminSite:editDonor' donor.donorid %}";
 		});
 	</script>
 {% endblock %}
