--- a/betasite/adminSite/templates/adminSite/donationList.html
+++ b/betasite/adminSite/templates/adminSite/donationList.html
@@ -30,7 +30,7 @@
 				    </tr>
 				  </thead>
 				  <tbody>
-				    {% for donation in object_list %}
+				    {% for donation in object_list.order_by %}
 				    <tr>
 					    <td><a href="{% url 'adminSite:donation' donation.donationno %}">{{ donation.donationno }}</a></td>
 					    <td><a href="{% url 'adminSite:donor' donation.donorid.donorid %}">{{ donation.donorid }}</a></td>
