--- a/betasite/mainSite/templates/mainSite/base.html
+++ b/betasite/mainSite/templates/mainSite/base.html
@@ -42,6 +42,11 @@
 		</div>
 	</div>
 	<script type="text/javascript">
+		$('#loginForm input').on("keypress", function(e) {
+			if(e.which == 10 || e.which == 13) {
+                this.form.submit();
+            }
+		});
 		$('#login').click(function() {
 			$('.small.modal').modal('show');
 		});
