--- a/betasite/adminSite/templates/adminSite/base.html
+++ b/betasite/adminSite/templates/adminSite/base.html
@@ -23,7 +23,7 @@
 		<div class="item">
 			<div class="header">Reports</div>
 			<div class="menu">
-				<a href="" class="item">Annual Report</a>
+				<a href="{% url 'adminSite:annualReport' %}" class="item">Annual Report</a>
 				<a href="{% url 'adminSite:monthlyReport' %}" class="item">Monthly Report</a>
 				<a href="" class="item">Due Payments</a>
 				<a href="" class="item">Coordinator's Class List</a>
