Added Table Sort to Table

--- a/betasite/adminSite/templates/adminSite/base.html
+++ b/betasite/adminSite/templates/adminSite/base.html
@@ -6,6 +6,7 @@
 	<link rel="stylesheet" type="text/css" href="{% static 'adminSite/dist/semantic.min.css' %}">
 	<script type="text/javascript" src="{% static 'adminSite/js/jquery-1.11.2.min.js' %}"></script>
 	<script type="text/javascript" src="{% static 'adminSite/dist/semantic.min.js' %}"></script>
+	<script type="text/javascript" src="{% static 'adminSite/js/tablesort.js' %}"></script>
 	{% block style %}{% endblock %}
 </head>
 <body>
