--- a/betasite/adminSite/templates/adminSite/donationList.html
+++ b/betasite/adminSite/templates/adminSite/donationList.html
@@ -17,7 +17,7 @@
 		<div class="row">
 			<div class="column"></div>
 			<div class="twelve wide column">
-				<table class="ui single line table">
+				<table class="ui sortable single line table">
 				  <thead>
 				    <tr>
 				      <th>Donation ID</th>
@@ -30,7 +30,7 @@
 				    </tr>
 				  </thead>
 				  <tbody>
-				    {% for donation in object_list.order_by %}
+				    {% for donation in object_list %}
 				    <tr>
 					    <td><a href="{% url 'adminSite:donation' donation.donationno %}">{{ donation.donationno }}</a></td>
 					    <td><a href="{% url 'adminSite:donor' donation.donorid.donorid %}">{{ donation.donorid }}</a></td>
@@ -74,6 +74,8 @@
 	<script type="text/javascript">
 		$('#addDonation').click(function() {
 			location.href = "{% url 'adminSite:addDonation' %}"
-		})
+		});
+		$('.sortable.table').tablesort();
+		
 	</script>
 {% endblock %}
